Fix alignment of filters table

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,9 @@
 @import "filters";
 
 .umpr-summary {
+
+  margin-top: 10px;
+
   .status-badge-success {
     /* merge of bootstrap's .btn .btn-success */
 
